<resources>
    <string name="app_name">WinloAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Product</string>

    <!--  product  -->
    <string name="total_product_title">Total Products:</string>
    <string name="total_product">00</string>
    <string name="most_selling_product_title">Most Sold Product:</string>
    <string name="most_selling_product">Product Name</string>
    <string name="search_product">Search Product</string>
    <string name="product_list">Available Products</string>
    <string name="search_by">Search By</string>
    <string name="search_by_name">Product Name</string>
    <string name="search_by_category">Product Category</string>
    <string name="search">Search</string>
    <string name="weight">00 g</string>
    <string name="unit_price">Rs. 5000.00</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_category">Category</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="confirm_delete_title">Delete Product</string>
    <string name="confirm_delete_txt">Are You Sure You Want To Delete This Product ?</string>
    <string name="yes">Yes</string>
    <string name="delete_failed">Product Delete Failed</string>
    <string name="delete_success">Product Delete Success</string>
    <string name="update_failed">Product Update Failed</string>
    <string name="update_success">Product Update Success</string>
    <string name="update_info">Update Product Info</string>
    <string name="cannot_be_deleted">Product Cannot be Deleted</string>
    <string name="product_name">Product Name</string>
    <string name="seasoning">Seasoning</string>
    <string name="grind_spices">Grind Spices</string>
    <string name="spices">Spices</string>
    <string name="not_available">Not Available</string>
    <string name="available">Available</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="availability">Availability</string>
    <string name="new_weight_option">New Weight Option</string>
    <string name="new_weight">Weight</string>
    <string name="new_price">Price</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_changes">No Changes</string>
    <string name="add_product_title">Add New Product</string>
    <string name="add_product">Save Product</string>
    <string name="new_product_info">New Product Info</string>
    <string name="missing_price">Missing Price</string>
    <string name="missing_weight">Missing Weight</string>
    <string name="missing_data">Missing Data</string>
    <string name="image_uploadFailed_abort_adding">Image Upload Failed! Abort Adding Product</string>
    <string name="product_adding_failed">Product Adding Failed</string>
    <string name="product_adding_success">Product Adding Success</string>
    <string name="failed_to_delete_old_image">Failed to delete old image</string>
    <string name="select_category">Select Category</string>
    <string name="select_availability">Select Availability</string>

    <!--  order  -->
    <string name="total_order_title">Total Orders:</string>
    <string name="total_order">00</string>
    <string name="order_search">Search Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="sort_by_title">Sort By</string>
    <string name="newest">Newest First</string>
    <string name="oldest">Oldest First</string>
    <string name="online">Online Payment</string>
    <string name="cash">Cash on Delivery</string>
    <string name="order_id">Order Id</string>
    <string name="order_weight">00g</string>
    <string name="order_qty">10</string>
    <string name="order_qty_title">Qty:</string>
    <string name="order_id_title">Id:</string>
    <string name="order_title">Orders</string>
    <string name="update_order_status">Update Order Status To:</string>
    <string name="update_order_status_btn">Update</string>
    <string name="delivered">Delivered</string>
    <string name="delivering">Delivering</string>
    <string name="ready_to_deliver">Ready to Deliver</string>
    <string name="pending">Pending</string>
    <string name="order_status_updated">Order status updated</string>
    <string name="order_status_update_failed">Order status update Failed</string>

    <!--  admin  -->
    <string name="add_admin">Add New Admin</string>
    <string name="admin_title">Admin</string>
    <string name="no_admin">No Admin</string>
    <string name="admin_delete_failed">Admin Removed</string>
    <string name="admin_delete_success">Admin Remove Failed</string>
    <string name="delete_admin_msg">Are You Sure You Want To Remove This Admin ?</string>
    <string name="delete_admin_title">Remove Admin</string>
    <string name="new_admin_email">Email Address</string>
    <string name="enter_new_admin_email">Enter New Admin Email Address</string>
    <string name="already_registered_admin">Already Registered Admin</string>
    <string name="admin_adding_failed">Admin Registration Success</string>
    <string name="admin_adding_success">Admin Registration Failed</string>

    <!--  dashboard  -->
    <string name="sales_and_revenue_title">Sales and Revenue</string>
    <string name="orders_title">Orders Status</string>
    <string name="top_selling">Top Selling Products</string>
    <string name="total_products">Products</string>
    <string name="total_orders">Order</string>
    <string name="total_customers">Customers</string>
    <string name="count">00</string>
    <string name="report">Print Report</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="sales">Sales (Units)</string>
    <string name="revenue">Revenue (Rs.)</string>

    <!--  login  -->
    <string name="login">Login with Google</string>
    <string name="not_registered">You Are Not Registered as a Admin</string>
    <string name="login_failed">Login Failed</string>
    <string name="something_went_wrong">Something Went Wrong</string>

    <!--  user  -->
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="total_users">Total Users</string>
    <string name="send_email">Send Email</string>
    <string name="email_subject">Subject</string>
    <string name="email_txt">Email Content</string>
    <string name="to">To:</string>
    <string name="action_cannot_be_completed">Action Cannot Be Completed</string>
    <string name="body_is_required">Body Is Required</string>
    <string name="subject_is_required">Subject Is Required</string>
    <string name="message_txt">Message</string>
    <string name="send_msg">Send Message</string>
    <string name="fill_message">Insert Message</string>
    <string name="message_sent">Message Sent Success</string>
    <string name="user_name">User Name</string>
    <string name="rigging">Rigging ...</string>
    <string name="talking">Talking ...</string>
    <string name="call_end">Call Ended</string>
    <string name="end_call">End Call</string>

    <!--  banner  -->
    <string name="add_new_banner">Add New Banner</string>

    <!--  authentication  -->
    <string name="default_web_client_id">441817025989-r4pm1824cc4tuqrhtlhrci9arerf77e9.apps.googleusercontent.com</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>